@@ -1047,8 +1047,8 @@ void bind_session()
         .value("save_settings", lt::session::save_settings)
         .value("save_dht_settings", lt::session::save_dht_settings)
         .value("save_dht_state", lt::session::save_dht_state)
-        .value("save_encryption_settings", lt::session:: save_encryption_settings)
 #ifndef TORRENT_NO_DEPRECATE
+        .value("save_encryption_settings", lt::session:: save_encryption_settings)
         .value("save_as_map", lt::session::save_as_map)
         .value("save_i2p_proxy", lt::session::save_i2p_proxy)
         .value("save_proxy", lt::session::save_proxy)
